Fixed progress bar vertical alignment.

--- a/modules/gui-react/frontend/src/widget/progress.module.css
+++ b/modules/gui-react/frontend/src/widget/progress.module.css
@@ -16,7 +16,7 @@
 .bar {
     position: absolute;
     width: 100%;
-    height: 1rem;
+    height: 100%;
     border-radius: .7rem;
 }
 
